// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigureNotifications Email 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        Setup Email Notifications
      </h1>
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="bp3-form-group"
            data-id="emailIds-0"
          >
            <label
              class="bp3-label"
              for="emailIds"
            >
              Type emails of your recipients
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                name="emailIds"
              >
                test@harness.io
              </textarea>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="userGroups-1"
          >
            <label
              class="bp3-label"
              for="userGroups"
            >
              Email all members of these user groups
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input bp3-tag-input"
              >
                <div
                  class="bp3-tag-input-values"
                >
                  <input
                    class="bp3-input-ghost"
                    data-mentions="multi-input-userGroups}"
                    placeholder="Type and press enter to create a tag"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
            style="align-items: center;"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Test
                  </span>
                </button>
              </span>
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-huge"
          >
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Submit
              </span>
            </button>
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ConfigureNotifications PagerDuty 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="service-pagerduty"
      >
        <svg
          height="24"
          viewBox="0 0 14 14"
          width="24"
        >
          <path
            d="M14 .7v12.6c0 .1-.1.2-.1.3-.2.2-.3.4-.6.4H.8c-.4 0-.6-.3-.7-.6v-.3-10V.8C.1.7.1.5.2.4.3.2.4.1.6 0H13.4c.1 0 .2.1.3.2l.3.3z"
            fill="#25bf50"
          />
          <path
            d="M2.4 8.5V6.1c0-.3.1-.6.3-.9s.5-.4.9-.5h1.8c.3 0 .5 0 .8.2.3.1.5.4.6.8V8c0 .3-.1.5-.2.8-.2.3-.5.5-.9.5H3.5s-.1 0-.1.1V11s0 .1-.1.1h-.9s-.1 0-.1-.1c.1-.8.1-1.7.1-2.5zM11.6 5.6V8c0 .2 0 .4-.1.6-.2.4-.5.7-1 .8H8.7c-.2 0-.4 0-.7-.1-.4-.2-.7-.5-.8-1V8 6.2c0-.2 0-.4.1-.6.2-.4.5-.6 1-.7H10.5c.1 0 .1 0 .1-.1V3.2c0-.1 0-.1.1-.1h.9c.1 0 .1 0 .1.1-.1.7-.1 1.5-.1 2.4z"
            fill="#fefefe"
          />
          <g
            fill="#25c051"
          >
            <path
              d="M3.4 7.1V6v-.2c0-.1.1-.2.3-.3h1.9s.2.1.2.2v2.2c0 .2-.1.3-.3.3h-2c-.1 0-.1 0-.1-.1v-1zM10.6 6.9V8c0 .3-.1.4-.4.4H8.5c-.1 0-.2-.1-.2-.2V8 6c0-.2.1-.3.3-.3h2c.1 0 .1 0 .1.1-.1.3-.1.7-.1 1.1z"
            />
          </g>
        </svg>
      </span>
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        Setup PagerDuty Notifications
      </h1>
      <p
        class="StyledProps--font StyledProps--main"
      >
        Enter the key for a PagerDuty Account/Service to which Harness can send notifications. You can copy/paste this key from PagerDuty's Configuration &gt; Services &gt; Service Details dialog &gt; Integrations tab.
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        For more details, see PagerDuty's documentation on Creating Integrations.
      </p>
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="bp3-form-group"
            data-id="key-0"
          >
            <label
              class="bp3-label"
              for="key"
            >
              PagerDuty Key
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="key"
                  type="text"
                  value="testKey"
                />
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xxlarge"
            style="align-items: center;"
          >
            <button
              class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Test
              </span>
            </button>
          </div>
          <div
            class="bp3-form-group"
            data-id="userGroups-1"
          >
            <label
              class="bp3-label"
              for="userGroups"
            >
              Alternatively, Notify the PagerDuty keys associated with these user groups
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input bp3-tag-input"
              >
                <div
                  class="bp3-tag-input-values"
                >
                  <input
                    class="bp3-input-ghost"
                    data-mentions="multi-input-userGroups}"
                    placeholder="Type and press enter to create a tag"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-xxlarge"
          >
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Submit
              </span>
            </button>
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ConfigureNotifications Slack 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="service-slack"
      >
        <svg
          height="24"
          viewBox="0 0 14 14"
          width="24"
        >
          <g
            fill="#e01e5a"
          >
            <path
              d="M3 8.8c0 .8-.7 1.5-1.5 1.5S0 9.6 0 8.8s.7-1.4 1.5-1.4H3zM3.7 8.8c0-.8.7-1.5 1.5-1.5s1.4.7 1.4 1.5v3.7c0 .8-.6 1.5-1.4 1.5s-1.5-.7-1.5-1.5z"
            />
          </g>
          <g
            fill="#36c5f0"
          >
            <path
              d="M5.2 3c-.8 0-1.5-.7-1.5-1.5S4.4 0 5.2 0s1.5.7 1.5 1.5V3zM5.2 3.7c.8 0 1.5.7 1.5 1.5S6 6.6 5.2 6.6H1.5C.7 6.6 0 6 0 5.2s.7-1.5 1.5-1.5z"
            />
          </g>
          <g
            fill="#2eb67d"
          >
            <path
              d="M11 5.2c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5-.7 1.5-1.5 1.5H11zM10.3 5.2c0 .8-.7 1.5-1.5 1.5C8 6.6 7.4 6 7.4 5.2V1.5C7.4.7 8 0 8.8 0s1.5.7 1.5 1.5z"
            />
          </g>
          <g
            fill="#ecb22e"
          >
            <path
              d="M8.8 11c.8 0 1.5.7 1.5 1.5S9.6 14 8.8 14s-1.5-.7-1.5-1.5V11zM8.8 10.3c-.8 0-1.5-.7-1.5-1.5.1-.8.7-1.4 1.5-1.4h3.7c.8 0 1.5.6 1.5 1.4s-.7 1.5-1.5 1.5z"
            />
          </g>
        </svg>
      </span>
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        Setup Slack Notifications
      </h1>
      <p
        class="StyledProps--font StyledProps--main"
      >
        You can receive Harness notifications in your Slack channels. You simply add a Slack Incoming Webhook into a Harness User Groups' Notification Settings.
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        For more details, see Slack’s doucmentation Getting Started with Incoming Webhooks.
      </p>
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="bp3-form-group"
            data-id="webhookUrl-0"
          >
            <label
              class="bp3-label"
              for="webhookUrl"
            >
              Slack Webhook URL
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="webhookUrl"
                  type="text"
                  value="http://valid.url"
                />
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xxlarge"
            style="align-items: center;"
          >
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Test
              </span>
            </button>
          </div>
          <div
            class="bp3-form-group"
            data-id="userGroups-1"
          >
            <label
              class="bp3-label"
              for="userGroups"
            >
              Alternatively, Notify the Slack Channels associated with these user groups
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input bp3-tag-input"
              >
                <div
                  class="bp3-tag-input-values"
                >
                  <input
                    class="bp3-input-ghost"
                    data-mentions="multi-input-userGroups}"
                    placeholder="Type and press enter to create a tag"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-xxlarge"
          >
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Submit
              </span>
            </button>
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
